@@ -5,6 +5,11 @@
 
 2018-06-03 mmichaud <m.michael.michaud@orange.fr>
   * bugfix in Dissolve2 : could not use geometry attribute as key
+  * 3 bugfix in layerListener management (hopefully fix #419)
+    - layerListener is removed when the concerned layer is removed
+    - sridStyle set geometry srid only once, not once per Layer
+    - layerListener added by AbstractPlugIn UndoableEdit is removed from
+      LayerManager when the layer is removed
 
 2018-06-02 mmichaud <m.michael.michaud@orange.fr>
   * upgrade dxf-driver to 0.9.0 (could not export MultiPolygon)
